# coj-backend

./: README.md  main_original.py  pyproject.toml  result.txt  run_api.py  test_pipeline.py
src/: __init__.py  config.py  main.py  sa.md  สรุปสั้นๆ.md  สรุปสำหรับprogrammer.md
src/api/: __init__.py  routes.py
src/models/: __init__.py  api.py  graph.py
src/services/: __init__.py  extraction.py  neo4j_service.py  search.py
src/utils/: __init__.py  thai_parser.py
